# og

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/og/: angle_utils.py  anim_utils.py  catstack.py  cfg_utils.py  chunked_vmap.py  ckpt_utils.py  ckpt_utils_old.py  cmap.py  color_utils.py  dyn_types.py  feat_utils.py  fixedstate.py  git_utils.py  grad_utils.py  iter_utils.py  jax_types.py  jax_utils.py  logging.py  loss_utils.py  math_utils.py  mathtext.py  nan_utils.py  normalization.py  path_utils.py  plot_phase_utils.py  plot_utils.py  redirect_stdout.py  reduce.py  remap.py  rng.py  runningmeanstd.py  schedules.py  shape_utils.py  small_la.py  tanh_transformed.py  tfp.py  timer.py  train_state.py  tree_utils.py  treenode_utils.py  (+1 more)
src/og/dyn/: cf.py  dbint.py  dyn.py  ode.py
src/og/networks/: ensemble.py  network_utils.py  optim.py
src/og/nnx/: mlp.py  nap.py  optimizer.py
src/og/optim/: nnls.py
src/og/plot/: colorbar.py  ez_ax.py  ez_axes.py  hist2d.py
src/og/rl/: distr.py  init_policies.py  replay_buffer_np.py
src/og/sdf/: rect.py  tri.py
tests/: hw.py  test_cf.py  test_cfg_poly.py  test_distr.py  test_grad.py  test_nap.py  test_otrainstate.py  test_replay_buffer_np.py  test_sched_cattrs.py  tmp.py
